--- a/packages/react-app/styles/index.css
+++ b/packages/react-app/styles/index.css
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html, body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -22,6 +22,9 @@ code {
 a {
   color: inherit;
   text-decoration: underline;
+}
+textarea {
+  font-size: 2.5rem;
 }
 
 * {
