--- a/packages/react-app/styles/Home.module.css
+++ b/packages/react-app/styles/Home.module.css
@@ -19,6 +19,7 @@
     width: 100%;
     height: 100px;
     border-top: 1px solid #eaeaea;
+    margin-left: -5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,8 +27,9 @@
 
 .footer a {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-decoration: underline;
     flex-grow: 1;
 }
 
